--- a/sql_pratice.ipynb
+++ b/sql_pratice.ipynb
@@ -11954,6 +11954,38 @@
     "    for result in results:\n",
     "        print(result[0].encode('ISO-8859-1').decode('cp949'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "('08001', '[08001] [Microsoft][ODBC Driver 18 for SQL Server]SSL Provider: [error:0A000102:SSL routines::unsupported protocol][error:0A0000C7:SSL routines::peer did not return a certificate] (-1) (SQLDriverConnect)')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39m# MSSQL에 연결\u001b[39;00m\n\u001b[1;32m     11\u001b[0m conn_str \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mDRIVER=\u001b[39m\u001b[39m{{\u001b[39;00m\u001b[39mODBC Driver 18 for SQL Server\u001b[39m\u001b[39m}}\u001b[39;00m\u001b[39m;SERVER=\u001b[39m\u001b[39m{\u001b[39;00mserver\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m{\u001b[39;00mport\u001b[39m}\u001b[39;00m\u001b[39m;DATABASE=\u001b[39m\u001b[39m{\u001b[39;00mdatabase\u001b[39m}\u001b[39;00m\u001b[39m;UID=\u001b[39m\u001b[39m{\u001b[39;00musername\u001b[39m}\u001b[39;00m\u001b[39m;PWD=\u001b[39m\u001b[39m{\u001b[39;00mpassword\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 12\u001b[0m conn \u001b[39m=\u001b[39m pyodbc\u001b[39m.\u001b[39;49mconnect(conn_str)\n",
+      "\u001b[0;31mOperationalError\u001b[0m: ('08001', '[08001] [Microsoft][ODBC Driver 18 for SQL Server]SSL Provider: [error:0A000102:SSL routines::unsupported protocol][error:0A0000C7:SSL routines::peer did not return a certificate] (-1) (SQLDriverConnect)')"
+     ]
+    }
+   ],
+   "source": [
+    "import pyodbc\n",
+    "\n",
+    "# MSSQL 서버 정보\n",
+    "server = '172.30.1.104'\n",
+    "database = 'efMain'\n",
+    "port = '8010'\n",
+    "username = 'senghon'\n",
+    "password = 'yyy5625'\n",
+    "\n",
+    "# MSSQL에 연결\n",
+    "conn_str = f'DRIVER={{ODBC Driver 18 for SQL Server}};SERVER={server},{port};DATABASE={database};UID={username};PWD={password}'\n",
+    "conn = pyodbc.connect(conn_str)"
+   ]
   }
  ],
  "metadata": {
@@ -11972,7 +12004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
